--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 </div>
                 <div class="interview-pics">
                     <div class="interview-down">
-                        <img id="interview-pic-big" src="pic/interview-1.jpg" alt="">
+                        <img id="interview-pic-big" src="pic/interview-big-pic.jpg" alt="">
                     </div>
                     <div class="interview-down">
                         <img class="interview-pic-small" src="pic/interview-2.jpg" alt="">
@@ -593,11 +593,78 @@
                         <img id="black-pic" src="pic/play-pic.svg" alt="">
                         <p id="black-watch">Үзэх</p>
                     </div>
+                    <div class="black-middle">
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-1.jpg" alt="">
+                            <div>
+                                <p class="black-middle-pra">ТРЭЙЛЕР: Энэ сард нээлтээ хийх Холливудын 5 кино</p>
+                                <p class="black-middle-date">5 0</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-2.jpeg" alt="">
+                            <div>
+                                <p class="black-middle-pra">18.3 ТЭРБУМ төгрөг бүхий соёлын эрхийн бичиг тараах Ч.Номин</p>
+                                <p class="black-middle-date">58 61</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-3.jpg" alt="">
+                            <div>
+                                <p class="black-middle-pra">Хөдөө аж ахуй, аж үйлдвэрийн салбарын стратегийн түншлэлийг хэлэлцэнэ</p>
+                                <p class="black-middle-date">17 3</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-4.jpeg" alt="">
+                            <div>
+                                <p class="black-middle-pra">УИХ-ын чуулганы хуралдаан 12:00 цаг хүртэл түр завсарлав</p>
+                                <p class="black-middle-date">17 4</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="black-down">
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-down-1.jpeg" alt="">
+                            <div>
+                                <p class="black-middle-pra">Самар, аньс, үхрийн нүд, нэрсийг 15 мянган төгрөгөөр худалдаж байна</p>
+                                <p class="black-middle-date">2 10</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-down-2.jpg" alt="">
+                            <div>
+                                <p class="black-middle-pra">ФОТО: Алдагдахаас сэргийлсэн соёлын дурсгалт зүйлс бүхий “Аврагдсан өв”</p>
+                                <p class="black-middle-date">4 5</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-down-3.jpg" alt="">
+                            <div>
+                                <p class="black-middle-pra">ФОТО: 36 дахь удаагийн Номын баяр Сүхбаатарын талбайд эхэллээ</p>
+                                <p class="black-middle-date">7 7</p>
+                            </div>
+                        </div>
+                        <div class="black-middle-whole">
+                            <img class="black-pics" src="pic/black-down-4.jpg" alt="">
+                            <div>
+                                <p class="black-middle-pra">БНХАУ-ын балетын театрын шилдэг бүжигчдийн БЭЛТГЭЛЭЭС</p>
+                                <p class="black-middle-date">40 168</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
+            <div class="footer-last">
+                <div>
+                    <img src="pic/gogo-logo.png" alt="">
+                </div>
+                <div>
 
+                </div>
+            </div>
         </footer>
     </main>
 </html>
