--- a/index.html
+++ b/index.html
@@ -657,12 +657,43 @@
             </div>
         </main>
         <footer>
-            <div class="footer-last">
-                <div>
-                    <img src="pic/gogo-logo.png" alt="">
+            <div class="footer-upper">
+                <div class="logo-footer">
+                    <img id="footer-logo" src="pic/gogo-logo.png" alt="">
                 </div>
-                <div>
-
+                <div class="footer-whole">
+                    <div class="footer-logo-pra">
+                        <div class="footer-logo">
+                            <img id="footer-pics" src="pic/footer-com.png" alt="">
+                            <p id="footer-title">Бидний тухай</p>
+                        </div>
+                        <div class="footer-logo">
+                            <img id="footer-pics" src="pic/footer-flower.png" alt="">
+                            <p id="footer-title">Сурталчилгаа байршуулах </p>
+                        </div>
+                        <div class="footer-logo">
+                            <img id="footer-pics" src="pic/footer-hand.png" alt="">
+                            <p id="footer-title">Редакцийн ёс зүй</p>
+                        </div>
+                        <div class="footer-logo">
+                            <img id="footer-pics" src="pic/footer-lock.png" alt="">
+                            <p id="footer-title">Нууцлалын бодлого</p>
+                        </div>
+                    </div>
+                    <div class="footer-down-pra">
+                        <img id="footer-pics" src="pic/footer-phone.png" alt="">
+                        <p id="footer-title">Холбоо барих</p>
+                    </div>
+                </div>
+            </div>
+            <div id="footer-line"></div>
+            <div class="footer-down">
+                <div id="footer-2007">© 2007 - 2024 Монгол Контент ХХК   •   Бүх эрх хуулиар хамгаалагдсан</div>
+                <div class="footer-icon">
+                    <img class="footer-icons" src="pic/facebook-logo.png" alt="">
+                    <img class="footer-icons" src="pic/twitter.png" alt="">
+                    <img class="footer-icons" src="pic/youtube.png" alt="">
+                    <img class="footer-icons" src="pic/instagram.png" alt="">
                 </div>
             </div>
         </footer>
