--- a/index.html
+++ b/index.html
@@ -135,14 +135,16 @@
                         <div class="title-pic">
                             <img id="title-pic" src="pic/pic.jpg" alt="">
                             <div class="read"></div>
-                            <p class="h3">Дэлгэрэнгүй унших </p>
-                        </div>
+                            <p class="h3">Дэлгэрэнгүй унших <img src="pic/arrow.svg" alt=""></p>
+                        </div>  
                     </div>
                     <div class="title-down">
                         <div class="down-title-div1">
-                            <img class="down-pic" src="pic/down-pic.jpeg">
-                            <div class="read1"></div>
-                            <p class="h1">Дэлгэрэнгүй унших</p>
+                            <div class="hover-down-pic">
+                                <img class="down-pic" src="pic/down-pic.jpeg">
+                                <div class="read1"></div>
+                                <p class="h1">Дэлгэрэнгүй унших</p>
+                            </div>
                             <p class="down-title-pra1">Хүн худалдаалах гэмт хэргийн тоо буурсныг амжилт гэж үзэж
                                 болохгүй</p>
                             <div class="number">
@@ -151,7 +153,11 @@
                             </div>
                         </div>
                         <div class="down-title-div2">
-                            <img class="down-pic" src="pic/down-pic2.jpg" alt="">
+                            <div class="hover-down-pic">
+                                <img class="down-pic" src="pic/down-pic2.jpg" alt="">
+                                <div class="read1"></div>
+                                <p class="h1">Дэлгэрэнгүй унших</p>
+                            </div>
                             <p class="down-title-pra1">А.Билгүүн "423", Б.Мөнхжин "seimei" нар Team Secret багт тоглоно
                             </p>
                             <div class="number">
@@ -160,7 +166,11 @@
                             </div>
                         </div>
                         <div class="down-title-div3">
-                            <img class="down-pic" src="pic/down-pic3.jpg" alt="">
+                            <div class="hover-down-pic">
+                                <img class="down-pic" src="pic/down-pic3.jpg" alt="">
+                                <div class="read1"></div>
+                                <p class="h1">Дэлгэрэнгүй унших</p>
+                            </div>
                             <p class="down-title-pra1">СЭРЭМЖЛҮҮЛЭГ: Ховд-Өлгий чиглэлийн замд цас ихээр хунгарлаж,</p>
                             <div class="number">
                                 <img class="share-middle" src="pic/share.png" alt="">
@@ -188,26 +198,56 @@
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic1.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">320</p>
+                        </div>
+                        <p class="story-par">Майк Тайсон 19 жилийн дараа мэргэжлийн бокст эргэн ирлээ</p>
                     </div>
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic2.png" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">439</p>
+                        </div>
+                        <p class="story-par">Бартаа, саадтай ууланд нуусан хүнд даацын 5 экскаваторыг олжээ</p>
                     </div>
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic3.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">503</p>
+                        </div>
+                        <p class="story-par">ҮНЭ НЭМЭВ: Нэг сарын цахилгааны төлбөрт 36,000₮ төлдөг айлууд 52,000₮ төлнө </p>
                     </div>
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic4.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">477</p>
+                        </div>
+                        <p class="story-par">Дорноговь аймагт байгалийн уран үйлдвэрлэх туршилт эхэлжээ</p>
                     </div>
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic5.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">849</p>
+                        </div>
+                        <p class="story-par">Торгуулиа төлдөггүй жолооч нараас Улаанбаатарын серитэй дугаарыг</p>
                     </div>
                     <div class="storys">
                         <img class="story-pic" src="pic/story-pic6.jpeg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
+                        <div class="story-eye">
+                            <img id="story-eye" src="pic/eye.png" alt="">
+                            <p id="story-p">1250</p>
+                        </div>
+                        <p class="story-par">Д.Далайжаргал: Бид Монголд анх удаа уран олборлож, экспортолно</p>
                     </div>
                 </div>
             </div>
@@ -220,31 +260,31 @@
                         <img id="unuudur-pic" src="pic/unuuder.png" alt="">
                     </div>
                     <div class="unuudur-calendar">
-                        <div>
+                        <div class="date">
                             <div class="line1"></div>
                             <p class="unuudur-date1">11 сарын 12</p>
                         </div>
-                        <div>
+                        <div class="date">
                             <div class="line"></div>
                             <p class="unuudur-date">11 сарын 11</p>
                         </div>
-                        <div>
+                        <div class="date">
                             <div class="line"></div>
                             <p class="unuudur-date">11 сарын 10</p>
                         </div>
-                        <div>
+                        <div class="date">
                             <div class="line"></div>
                             <p class="unuudur-date">11 сарын 09</p>
                         </div>
-                        <div>
+                        <div class="date">
                             <div class="line"></div>
                             <p class="unuudur-date">11 сарын 08</p>
                         </div>
-                        <div>
+                        <div class="date">
                             <div class="line"></div>
                             <p class="unuudur-date">11 сарын 07</p>
                         </div>
-                        <div>
+                        <div class="dot">
                             <div id="dot">...</div>
                         </div>
                     </div>
@@ -942,7 +982,7 @@
                             <div id="trend-title-1">
                                 <p class="trend-par">ФОТО: 2024 оны зэрлэг байгалийн ШИЛДЭГ ГЭРЭЛ ЗУРГУУД</p>
                                 <div class="trend-share-and-icon">
-                                    <div class="share">
+                                    <div `class="share">
                                         <img id="share-icon1" src="pic/share.png" alt="">
                                         <p class="trend-word">28</p>
                                     </div>
@@ -969,21 +1009,43 @@
             <div class="interview-pics">
                 <div class="interview-down">
                     <img id="interview-pic-big" src="pic/interview-big-pic.jpg" alt="">
+                    <div class="interview-inside">
+                        <p class="interview-p">Гарааны бизнес</p>
+                        <p class="interview-par">Т.Диймаа: Хүн галын эрчмээ лаагаар нөхөх боломжтой</p>
+                        <div id="interview-line"></div>
+                        <p class="more">Дэлгэрэнгүй</p>
+                    </div>
                 </div>
                 <div class="interview-down">
                     <div class="over-hidden">
                         <img class="interview-pic-small" src="pic/interview-2.jpg" alt="">
+                        <div class="interview-small-inside">
+                            <p class="small-p">Элчин сайд</p>
+                            <p class="small-par">Элчин сайд Ина Марчюлёните: Залуусыг уриалж, зөв зүйлд чиглүүлж чаддаг удирдагчид хэрэгтэй</p>
+                        </div>
                     </div>
                     <div class="over-hidden">
                         <img class="interview-pic-small" src="pic/interview-3.jpg" alt="">
+                        <div class="interview-small-inside">
+                            <p class="small-p">Хүний түүх</p>
+                            <p class="small-par">Хүний түүх: Азид хамгийн томд тооцогддог босоо амны төслийн анхны эмэгтэй маркшейдер О.Энхмаа</p>
+                        </div>
                     </div>
                 </div>
                 <div class="interview-down">
                     <div class="over-hidden">
                         <img class="interview-pic-small" src="pic/interview-4.jpg" alt="">
+                        <div class="interview-small-inside">
+                            <p class="small-p">Хүний түүх</p>
+                            <p class="small-par">Д.Бямбасүрэн: Ю.Цэдэнбал гуай нягтлан бодох мэргэжилтэй тул эдийн засаг тайлбарлахад маш амар байв</p>
+                        </div>
                     </div>
                     <div class="over-hidden">
                         <img class="interview-pic-small" src="pic/interview-5.jpg" alt="">
+                        <div class="interview-small-inside">
+                            <p class="small-p">Хүний түүх</p>
+                            <p class="small-par">"Регистрийн дугаар олголт 1983 онд эхэлж, 1988 онд дууссан юм. Олон жилийн хөдөлмөр орсон байв"</p>
+                        </div>
                     </div>
 
                 </div>
@@ -1088,8 +1150,10 @@
             </div>
             <div class="style-down">
                 <div>
-                    <div>
-                        <img class="tech-pics" src="pic/tech-1.jpg" alt="">
+                    <div class="tech-hover">
+                        <div><img class="tech-pics" src="pic/tech-1.jpg" alt=""></div>
+                        <div class="tech-black"></div>
+                        <p class="tech-read">Унших</p>
                     </div>
                     <div class="style-title">
                         <p class="style-par">“Nvidia” зах зээлийн үнэлгээгээр “Apple”-ийг гүйцэж, тэргүүлэгчийн байр
@@ -1108,8 +1172,10 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="tech-hover">
                         <img class="tech-pics" src="pic/tech-2.jpg" alt="">
+                        <div class="tech-black"></div>
+                        <p class="tech-read">Унших</p>
                     </div>
                     <div class="style-title">
                         <p class="style-par">187 компанийн app-ыг устах эрсдэлээс сэргийлж, баталгаажууллаа</p>
@@ -1127,8 +1193,10 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="tech-hover">
                         <img class="tech-pics" src="pic/tech-3.jpg" alt="">
+                        <div class="tech-black"></div>
+                        <p class="tech-read">Унших</p>
                     </div>
                     <div class="style-title">
                         <p class="style-par">“Тоёота Моторс Корпораци” нисдэг машины анхны туршилтаа амжилттай хийжээ
@@ -1147,8 +1215,10 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="tech-hover">
                         <img class="tech-pics" src="pic/tech-4.jpg" alt="">
+                        <div class="tech-black"></div>
+                        <p class="tech-read">Унших</p>
                     </div>
                     <div class="style-title">
                         <p class="style-par">Meta хувьцааны өсөлтөөрөө технологийн компаниудаа тэргүүлж байна</p>
@@ -1174,7 +1244,11 @@
             </div>
             <div class="komik-dowm">
                 <div class="komik-pra">
-                    <img class="komik-pics" src="pic/komik -1.jpeg" alt="">
+                    <div class="komik-hover">
+                        <div><img class="komik-pics" src="pic/komik -1.jpeg" alt=""></div>
+                        <div class="komik-black"></div>
+                        <p class="komik-read">Унших</p>
+                    </div>
                     <div class="komik-title">
                         <p id="komik-pra">Нэг өрөөнд хамт хэвтсэн энэ хэцүү хүний ДАТА ДУУСААСАЙ</p>
                         <div class="share-and-icon">
@@ -1190,7 +1264,11 @@
                     </div>
                 </div>
                 <div class="komik-pra">
-                    <img class="komik-pics" src="pic/komik-2.jpeg" alt="">
+                    <div class="komik-hover">
+                        <div><img class="komik-pics" src="pic/komik-2.jpeg" alt=""></div>
+                        <div class="komik-black"></div>
+                        <p class="komik-read">Унших</p>
+                    </div>
                     <div class="komik-title">
                         <p id="komik-pra">Хөгжлийн банкны шүүгдэгчдийн хөөрхийлөлтэй мэдүүлгүүд</p>
                         <div class="share-and-icon">
@@ -1441,5 +1519,4 @@
         </div>
     </footer>
 </main>
-
 </html>
