--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
                         <p class="story-par">ҮНЭ НЭМЭВ: Нэг сарын цахилгааны төлбөрт 36,000₮ төлдөг айлууд 52,000₮ төлнө </p>
                     </div>
-                    <div class="storys1">
+                    <div class="storys">
                         <img class="story-pic1" src="pic/story-pic4.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
                         <div class="story-eye">
@@ -231,7 +231,7 @@
                         </div>
                         <p class="story-par">Дорноговь аймагт байгалийн уран үйлдвэрлэх туршилт эхэлжээ</p>
                     </div>
-                    <div class="storys1">
+                    <div class="storys">
                         <img class="story-pic1" src="pic/story-pic5.jpg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
                         <div class="story-eye">
@@ -240,7 +240,7 @@
                         </div>
                         <p class="story-par">Торгуулиа төлдөггүй жолооч нараас Улаанбаатарын серитэй дугаарыг</p>
                     </div>
-                    <div class="storys1">
+                    <div class="storys">
                         <img class="story-pic1" src="pic/story-pic6.jpeg" alt="">
                         <img id="little-logo" src="pic/little-logo.svg" alt="">
                         <div class="story-eye">
